--- a/HappyCup/app/src/main/AndroidManifest.xml
+++ b/HappyCup/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".data.di.MyApplication"
+        android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/Theme.HappyCup">
         <activity
             android:name=".ui.main.view.activity.LoginActivity"
@@ -22,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.main.view.activity.MainActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
