로딩 이미지 수정 및 네비게이션 드로어 구현

--- a/HappyCup/app/build.gradle
+++ b/HappyCup/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
 
 // Koin AndroidX Experimental features
     implementation "io.insert-koin:koin-androidx-ext:$koin_version"
+
+    implementation files('libs/libDaumMapAndroid.jar')
 }
