--- a/HappyCup/app/src/main/AndroidManifest.xml
+++ b/HappyCup/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".ui.main.view.activity.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            android:stateNotNeeded="true"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
+
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="54503fd3af9327fcbcc8173a9a8481d3"/>
 
     </application>
