--- a/HappyCup/app/src/main/AndroidManifest.xml
+++ b/HappyCup/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
     package="com.cookandroid.happycup">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -20,16 +21,18 @@
         android:theme="@style/Theme.HappyCup">
         <activity
             android:name=".ui.main.view.activity.LoginActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".ui.main.view.activity.MainActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.main.view.activity.MainActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".ui.main.view.activity.CaptureActivity"
             android:screenOrientation="fullSensor"
