--- a/HappyCup/app/src/main/AndroidManifest.xml
+++ b/HappyCup/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.cookandroid.happycup">
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -7,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
@@ -19,6 +20,7 @@
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.HappyCup">
+
         <activity
             android:name=".ui.main.view.activity.LoginActivity"
             android:theme="@style/SplashTheme"
@@ -28,17 +30,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.main.view.activity.MainActivity"
             android:exported="true">
-
         </activity>
-        <activity android:name=".ui.main.view.activity.CaptureActivity"
+        
+        <activity
+            android:name=".ui.main.view.activity.CaptureActivity"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
             android:windowSoftInputMode="stateAlwaysHidden"/>
 
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="54503fd3af9327fcbcc8173a9a8481d3"/>
+        <activity android:name=".ui.main.view.fragment.PhotoCollectionActivity"/>
+
+
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="4a2968cce9ca2fa2ab3e18ac53c8453b"/>
 
     </application>
 
