--- a/HappyCup/app/build.gradle
+++ b/HappyCup/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     // okhttp
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.5.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     // use for httploggingintercepter
     implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.5.0'
 
@@ -115,12 +116,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-// Koin AndroidX ViewModel features
+    // Koin AndroidX ViewModel features
     implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
-// Koin AndroidX Fragment features
+    // Koin AndroidX Fragment features
     implementation "io.insert-koin:koin-androidx-fragment:$koin_version"
 
-// Koin AndroidX Experimental features
+    // Koin AndroidX Experimental features
     implementation "io.insert-koin:koin-androidx-ext:$koin_version"
 
     implementation files('libs/libDaumMapAndroid.jar')
