--- a/HappyCup/app/src/main/AndroidManifest.xml
+++ b/HappyCup/app/src/main/AndroidManifest.xml
@@ -44,8 +44,10 @@
 
         <activity android:name=".ui.main.view.fragment.PhotoCollectionActivity"/>
 
+        <activity android:name=".ui.main.view.fragment.product"/>
+        <activity android:name=".ui.main.view.fragment.PointList"/>
 
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="54503fd3af9327fcbcc8173a9a8481d3"/>
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="4a2968cce9ca2fa2ab3e18ac53c8453b"/>
 
     </application>
 
